# rapidlink

./: .env  .flaskenv  .gitignore  Dockerfile  Procfile  README.md  app.py  config.py  glitch.json  links.db  pyproject.toml  requirements.txt  user.db
.github/workflows/: deployment.yml
deployment/: deployment.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml
rapidlink/: __init__.py
rapidlink/api/: __init__.py  links.py
rapidlink/auth/: __init__.py  auth.py
rapidlink/controllers/: auth_controller.py  links_controller.py
rapidlink/database/: links_database.py  sqlite.py  user_datebase.py
rapidlink/helpers/: id.py  regx.py  response.py
rapidlink/middlewares/: cors.py  jwt.py
rapidlink/static/js/: app.js
rapidlink/templates/: app.html  preview.html
templates/: preview.html
