[tool.poetry]
name = "rapidlink"
version = "0.1.0"
description = ""
authors = ["Steven <106362981+stevenleep@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-jwt-extended = "^4.6.0"
python-dotenv = "^1.0.1"
flask-cors = "^4.0.1"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
